added writing option for human